force-app/main/default/objects/DHS_Lead_RTA_Extension__c/DHS_Lead_RTA_Extension__c.object-meta.xml
<CustomObject>
    <label>Lead RTA Extension</label>
    <nameField>
        <displayFormat>LeadRTAExt-{00000}</displayFormat>
        <label>Lead RTA Extension Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead RTA Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>