force-app/main/default/objects/DHS_Lead_RTA_Extension__c/fields/DHS_Lead__c.field-meta.xml
<CustomField>
    <fullName>DHS_Lead__c</fullName>
    <label>Lead</label>
    <referenceTo>DHS_Lead__c</referenceTo>
    <relationshipLabel>Lead RTA Extensions</relationshipLabel>
    <relationshipName>DHS_Lead_RTA_Extensions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>