force-app/main/default/objects/DHS_Lead_RTA_Extension__c/fields/Foreign_Travel1__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Travel1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Foreign Travel1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>